<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10sp"
    android:layout_marginVertical="20sp"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    tools:context=".MainActivity">
    <ScrollView
        android:id="@+id/scrollView_Section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/linear_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <!--            31/7/2021       -->
            <TextView
                android:id="@+id/section_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="วันที่ 31/7/2021"
                android:textColor="@color/red_500"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginVertical="5sp"
                android:textAlignment="center"
                android:background="@color/black"
                />

            <RadioGroup
                android:id="@+id/group1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sushi"
                    />
                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Bento"
                    />
                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Teriyaki"
                    />
            </RadioGroup>
            <Button
                android:id="@+id/group_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="submit RadioGroup"
                android:layout_marginBottom="14dp"
                />

            <CheckBox
                android:id="@+id/chkSushi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sushi"
                />
            <CheckBox
                android:id="@+id/chkBento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bento"
                />
            <CheckBox
                android:id="@+id/chkTeriyaki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Teriyaki"
                />
            <CheckBox
                android:id="@+id/chkRamen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ramen"
                />

            <Button
                android:id="@+id/chk_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="submit CheckBox"
                android:layout_marginBottom="14dp"
                />

            <TextView
                android:id="@+id/ColorPalletSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="COLOR PALLET FOR SEEKBAR"
                android:textSize="26dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/seekBarTextRed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="RED : 0"
                android:textStyle="bold"
                android:textSize="16dp"

                />
            <SeekBar
                android:id="@+id/seekBarRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_weight="5"
                android:progress="0"
                >
                <requestFocus/>
            </SeekBar>

            <TextView
                android:id="@+id/seekBarTextGreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="GREEN : 0"
                android:textStyle="bold"
                android:textSize="16dp"

                />
            <SeekBar
                android:id="@+id/seekBarGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_weight="5"
                android:progress="0"
                >
                <requestFocus/>
            </SeekBar>

            <TextView
                android:id="@+id/seekBarTextBlue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="BLUE : 0"
                android:textStyle="bold"
                android:textSize="16dp"

                />
            <SeekBar
                android:id="@+id/seekBarBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:layout_weight="5"
                android:progress="0"
                >
                <requestFocus/>
            </SeekBar>

            <TextView
                android:id="@+id/seekBarTextResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="THIS IS COLOR PALLET"
                android:textSize="32dp"
                android:textAlignment="center"
                />

            <!--            -->



<!--            17/7/2021-->
            <TextView
                android:id="@+id/section_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_1"
                android:textColor="@color/red_500"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="5sp"
                android:textAlignment="center"
                android:background="@color/black"
                />
                <TextView
                    android:id="@+id/title"
                    android:text="@string/title_page"
                    android:textColor="@color/purple_500"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/oldname"
                    android:text="@string/title_name"
                    android:textColor="@color/teal_700"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
<!--                <EditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/editText1old"-->
<!--                    android:hint="@string/date_picker"-->
<!--                    android:textColorHint="@color/red_500"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:inputType="datetime"-->
<!--                    />-->
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_submit"
                    android:onClick="clickFx"
                    />
                <Button
                    android:id="@+id/oldbutton2"
                    android:background="@drawable/mybutton"
                    android:text="Submit"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textSize="18pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickFx"
                    />
<!--            -->

            <TextView
                android:id="@+id/section_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_2"
                android:textColor="@color/red_500"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginVertical="5sp"
                android:textAlignment="center"
                android:background="@color/black"
                />
<!--            OnClick 3 แบบ-->
            <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickButton"
            android:text="exp1_ New York" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickButton"
            android:text="exp1_ Manila"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickButton"
            android:text="exp1_ Taipei"
            android:textAllCaps="false"

            />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickButton"
            android:text="exp1_ Catch Error"
            android:textAllCaps="false" />

        // แบบที่ 2

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="exp2_ Manila"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="exp2_ Taipei"
            android:textAllCaps="false" />

        // แบบที่ 3

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickButton"
            android:text="exp3_ New York" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickButton"
            android:text="exp3_ Manila"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickButton"
            android:text="exp3_ Taipei"
            android:textAllCaps="false" />
<!--            -->

        </LinearLayout>
    </ScrollView>



</LinearLayout>